--- a/hugo-site/hugo.yaml
+++ b/hugo-site/hugo.yaml
@@ -83,8 +83,8 @@ params:
     Title: "DavidCraddock.Games"
 
     Content: >
-      Hi, I'm David. Welcome to my gaming blog! Here, I write about games, gaming and everything in between. I self-host this blog. Self-hosting websites have the disadvantage that sometimes they are not available - uptime is not 100%, and search engines don't like that aspect. However I feel it is worth it for the learning experience and the control I have over every aspect of my sites. If you need to contact me at any time, please use: <a href="mailto:3rp2mzocr@mozmail.com">3rp2mzocr@mozmail.com</a>.
-
+      Hi, I'm David. This is the blog where I post about computer and console games, my gaming collection and my gaming setups. I am <a href="https://davidcraddock.net">David Craddock the technologist from Manchester</a>, UK. I am NOT the same person as the much more famous <a href="https://davidcraddockbooks.com">David L. Craddock</a>, although I do enjoy his gaming writing!
+  If you need to contact me at any time, please use: <a href="mailto:3rp2mzocr@mozmail.com">3rp2mzocr@mozmail.com</a>.
       <img loading="lazy" style="object-fit:contain;max-width:100%;max-height:100%;width:127px;height:127px;margin-top:20px;margin-bottom:0px;" src="/mugshot.png" alt="A mugshot of me">
 
   socialIcons:
